--- a/index.html
+++ b/index.html
@@ -8,13 +8,27 @@
 </head>
 <body>
   <header>
-    <nav>
-      <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#settings">Settings</a></li>
-      </ul>
-    </nav>
+    <div class="hamburger-menu">
+    <i id="menu-icon" class="fa fa-bars"></i>
+    <div id="side-menu" class="side-menu hidden">
+      <a href="#home">Home</a>
+      <a href="#about">About</a>
+      <div class="settings-dropdown">
+        <span>Settings</span>
+        <div class="dropdown-content">
+          <label for="language">Language:</label>
+          <select id="language">
+            <option value="en-US">English</option>
+            <option value="es-ES">Spanish</option>
+            <option value="fr-FR">French</option>
+          </select>
+          <label>Voice:</label>
+          <label><input type="radio" name="voice" value="male"> Male</label>
+          <label><input type="radio" name="voice" value="female"> Female</label>
+        </div>
+      </div>
+    </div>
+  </div>
   </header>
 
   <main>
