--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<header>
     <div class="hamburger-menu">
     <i id="menu-icon" class="fa fa-bars"></i>
     <div id="side-menu" class="side-menu hidden">
@@ -29,6 +29,7 @@
       </div>
     </div>
   </div>
+</header>
 
   <main>
     <!-- Landing/Transcription Page -->
