--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <header>
     <div class="hamburger-menu">
     <i id="menu-icon" class="fa fa-bars"></i>
-    <div id="side-menu" class="side-menu hidden">
+    <div id="side-menu" class="side-menu">
       <a href="#home">Home</a>
       <a href="#about">About</a>
       <div class="settings-dropdown">
