--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 <header>
     <div class="hamburger-menu">
   <i id="menu-icon" class="fa fa-bars"></i>
-  <div id="side-menu" class="side-menu hidden">
+  <div id="menu-items" class="hidden">
     <a href="#home">Home</a>
     <a href="#about">About</a>
-    <div class="settings-dropdown">
-      <span>Settings</span>
-      <div class="dropdown-content">
+    <!-- Settings with Dropdown and Radio Buttons -->
+    <div class="settings">
+      <a href="javascript:void(0)">Settings</a>
+      <div class="settings-dropdown">
         <label for="language">Language:</label>
         <select id="language">
           <option value="en-US">English</option>
