--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 <header>
     <div class="hamburger-menu">
   <i id="menu-icon" class="fa fa-bars"></i>
-  <div id="menu-items" class="hidden">
-  <!-- Settings with Dropdown and Radio Buttons -->
-    <div class="settings">
-      <a href="javascript:void(0)">Settings</a>
-      <div class="settings-dropdown">
+  <div id="side-menu" class="side-menu hidden">
+    <a href="#home">Home</a>
+    <a href="#about">About</a>
+    <div class="settings-dropdown">
+      <span>Settings</span>
+      <div class="dropdown-content">
         <label for="language">Language:</label>
         <select id="language">
           <option value="en-US">English</option>
@@ -29,6 +30,7 @@
     </div>
   </div>
 </div>
+
 </header>
 
   <main>
