--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <header>
     <div class="hamburger-menu">
   <i id="menu-icon" class="fa fa-bars"></i>
-  <div id="side-menu" class="side-menu hidden">
+  <div id="dropdown-menu" class="dropdown-menu hidden">
     <a href="#home">Home</a>
     <a href="#about">About</a>
     <div class="settings-dropdown">
@@ -30,7 +30,6 @@
     </div>
   </div>
 </div>
-
 </header>
 
   <main>
