changed text area to div for highlight component

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
       <div id="transcription">
         <button id="listenBtn">Listen</button>
         <button id="speakBtn">Speak</button>
-        <textarea id="output" placeholder="Your transcription will appear here..."></textarea>
+        <div id="output" class="transcription-output" contenteditable="false" aria-label="Transcription area">
+        Your transcription will appear here...
+      </div>
         <button id="saveBtn">Save Transcript</button>
       </div>
     </section>
