added contenteditable behavior

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div id="transcription">
         <button id="listenBtn">Listen</button>
         <button id="speakBtn">Speak</button>
-        <div id="output" class="transcription-output" aria-label="Transcription area">
+        <div id="output" class="transcription-output" contenteditable="true" aria-label="Transcription area">
         Your transcription will appear here...
       </div>
         <button id="saveBtn">Save Transcript</button>
