catch phrase added

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
   <main>
     <!-- Landing/Transcription Page -->
     <section id="home">
-      <h1>Welcome to HearMeOut</h1>
+      <h1>HearMeOut</h1>
+      <h2>Your real time transcription tool for the hearing impaired</h2>
       <div id="transcription">
         <button id="listenBtn">Listen</button>
         <button id="speakBtn">Speak</button>
