added a dark theme funct.

--- a/index.html
+++ b/index.html
@@ -12,21 +12,8 @@
     <div class="hamburger-menu">
   <i id="menu-icon" class="fa fa-bars"></i>
   <div id="dropdown-menu" class="dropdown-menu hidden">
-   <div class="settings-dropdown">
-      <span>Settings</span>
-      <div class="dropdown-content">
-        <label for="language">Language:</label>
-        <select id="language">
-          <option value="en-US">English</option>
-          <option value="es-ES">Spanish</option>
-          <option value="fr-FR">French</option>
-        </select>
-        <label>Voice:</label>
-        <label><input type="radio" name="voice" value="male"> Male</label>
-        <label><input type="radio" name="voice" value="female"> Female</label>
-      </div>
-    </div>
-  </div>
+  <button id="themeToggle">Toggle Dark Theme</button>
+</div>  
 </div>
 </header>
 
