moved app-name to header

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 </head>
 <body>
 <header>
+  <h1 class="app-name">HearMeOut</h1>
     <div class="hamburger-menu">
   <i id="menu-icon" class="fa fa-bars"></i>
   <div id="dropdown-menu" class="dropdown-menu hidden">
@@ -31,8 +32,7 @@
   <main>
     <!-- Landing/Transcription Page -->
     <section id="home">
-      <h1>HearMeOut</h1>
-      <h4>Your real time transcription tool for the hearing impaired</h4>
+      <h4>Empowering Communication in Real Time.</h4>
       <div id="transcription">
         <button id="listenBtn">Listen</button>
         <button id="speakBtn">Speak</button>
