--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <title>HearMeOut</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+
 <!-- Zonka Feedback JavaScript Code Starts-->
       <script id="zfEmbed">
             window._zfQueue = window._zfQueue || []; function _zf(){_zfQueue.push(arguments); }
