--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <main>
     <!-- Landing/Transcription Page -->
     <section id="home">
-      <h4>Empowering Communication in Real Time.</h4>
+      <h4>Empowering Communication in Real Time!</h4>
       <div id="transcription">
         <button id="listenBtn">Listen</button>
         <button id="speakBtn">Speak</button>
