switched to white favicon

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
 <header>
-  <img src="Assets/favicon.png" alt="App Icon" class="app-icon">
+  <img src="Assets/white_favicon.png" alt="App Icon" class="app-icon">
   <h1 class="app-name">HearMeOut</h1>
     <div class="hamburger-menu">
   <i id="menu-icon" class="fa fa-bars"></i>
