--- a/index.html
+++ b/index.html
@@ -45,7 +45,17 @@
       </div>
         <button id="saveBtn">Save Transcript</button>
       </div>
-    </section>
+      <!-- Translation Controls -->
+    <div class="translation-controls">
+    <select id="language-selector">
+    <option value="fr">French</option>
+    <option value="es">Spanish</option>
+    <option value="de">German</option>
+    <option value="it">Italian</option>
+    </select>
+    <button id="translate-btn">Translate</button>
+    </div>
+  </section>
   </main>
 
   <footer>
