removed doublr translate button

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <button id="saveBtn">Save Transcript</button>
       <!-- Translation Controls -->
    <button id="translate-btn">Translate</button>
-    <select id="language-selector">
+    <select id="language-dropdown" class="hidden">
     <option value="fr">French</option>
     <option value="es">Spanish</option>
     <option value="de">German</option>
