--- a/index.html
+++ b/index.html
@@ -45,14 +45,17 @@
       </div>
         <button id="saveBtn">Save Transcript</button>
       <!-- Translation Controls -->
+   <div class="translation-controls">
    <button id="translate-btn">Translate</button>
     <select id="language-dropdown" class="hidden">
     <option value="fr">French</option>
     <option value="es">Spanish</option>
     <option value="de">German</option>
     <option value="it">Italian</option>
+    <option value="En">English</option>
     </select>
-      </div>
+   </div>
+  </div
   </section>
   </main>
 
